--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
             <div class="container px-4 px-lg-5">
                 <!-- Featured Project Row-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="..." /></div>
+                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/feature-image.jpg" alt="..." /></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
                             <h4>NFT preview card component</h4>
-                            <p class="text-black-50 mb-0">This is a solution to the <a href="https://www.frontendmentor.io/challenges/nft-preview-card-component-SbdUL_w0U">NFT preview card component challenge on Frontend Mentor</a>. Frontend Mentor challenges help you improve your coding skills by building realistic projects.</p>
+                            <p class="text-black-50 mb-0">This is a solution to the <a href="https://www.frontendmentor.io/challenges/nft-preview-card-component-SbdUL_w0U">NFT preview card component challenge on Frontend Mentor</a>.</p>
                         </div>
                     </div>
                 </div>
@@ -48,8 +48,9 @@
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">Misty</h4>
-                                    <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                                    <h4 class="text-white">AMH Writings</h4>
+                                    <p class="mb-0 text-white-50">A webpage that I helped to design using Wix.com for a friend of mine.</p>
+									<a href="https://amhwritings.wixsite.com/novels">Link to Project</a>
                                     <hr class="d-none d-lg-block mb-0 ms-0" />
                                 </div>
                             </div>
