--- a/nft-preview/index.html
+++ b/nft-preview/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Outfit">
   <link href="stylesheet.css" rel="stylesheet">
-  
+  <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
   <title>Frontend Mentor | NFT preview card component</title>
   <style>
 	body { font-family: "Outfit";
@@ -19,18 +19,22 @@
 <body>
 	<div id="wrapper" >
 		<header>
-			<img style="border-radius: 30px;" src="images/image-equilibrium.jpg" alt="Equilibrium" width="302" height="302">
-			<h2>Equilibrium #3429</h2>
+		
+		<div class="container">
+			<img style="border-radius: 30px;" src="images/image-equilibrium.jpg" alt="Equilibrium" class="image" width="302" height="302">
+			<div class="overlay">
+				<div class="text"><i class="fa fa-eye fa-2xl"></i></div>
+			</div>
+		</div>
+		<h2><a class="head">Equilibrium #3429</a></h2>
+		
 		</header>  
 		<main> 
 			Our Equilibrium collection promotes balance and calm.
 		</main> 
-		<p><img src="images/icon-ethereum.svg" alt="Ethereum Icon" height="25" style="vertical-align:top; padding-right: 5px;"> <span style="color:hsl(178, 100%, 50%)">0.041 ETH</span><span style="padding-left: 50px;"><img src="images/icon-clock.svg" alt="Clock Icon" height="25" style="vertical-align:top; padding-right: 5px;">3 days left</p>
-			
-			
-			
+		<p><img src="images/icon-ethereum.svg" alt="Ethereum Icon" height="25" style="vertical-align:top; padding-right: 5px;"> <span style="color:hsl(178, 100%, 50%)">0.041 ETH</span><span style="padding-left: 86px;"><img src="images/icon-clock.svg" alt="Clock Icon" height="25" style="vertical-align:top; padding-right: 5px;">3 days left</p>
 		<hr style="border-color: hsl(215, 32%, 27%)">
-			<p><img src="images/image-avatar.png" alt="Creator Avatar" width="42" height="42" style="vertical-align:middle; border-radius: 50%; border: 1px solid hsl(0, 0%, 100%);"> Creation of <span style="color:hsl(0, 0%, 100%)">Jules Wyvern</p>
+			<p><img src="images/image-avatar.png" alt="Creator Avatar" width="42" height="42" style="vertical-align:middle; border-radius: 50%; border: 1px solid hsl(0, 0%, 100%);"> Creation of <span class="name">Jules Wyvern</p>
 	</div>
 	<footer>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/Jacob-Heff">Jacob Heffington</a>.
