--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div class="text-center">
                         <h1 class="mx-auto my-0 text-uppercase">Jacob Heffington</h1>
                         <h2 class="text-white-50 mx-auto mt-2 mb-5">Freshman Computer Science Education Major & Full Stack Web Developer</h2>
-                        <a class="btn btn-primary" href="#about">View More</a>
+                        <a class="btn btn-primary" href="#about">Learn More</a>
                     </div>
                 </div>
             </div>
@@ -31,22 +31,34 @@
 		<!-- About-->
         <section class="about-section text-center" id="about">
             <div class="container px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-lg-8">
-                        <h2 class="text-white mb-4">Built with Bootstrap 5</h2>
-                        <p class="text-white-50">
-                            Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-                            <a href="https://startbootstrap.com/theme/grayscale/">the preview page.</a>
-                            The theme is open source, and you can use it for any purpose, personal or commercial.
+				<div class="row gx-4 gx-lg-5">
+                    <div class="col-sm">
+					<img src="assets/img/ipad.png" alt="...">
+					</div>
+					<div class="col-sm">
+					<p></p>
+                        <h1 class="text-white mb-4">About Me</h1>
+                        <p></p>
+						<h3 class="text-white">Who Am I?</h3>
+						<p class="text-white-50">
+                            I am a freshman Computer Science Education major at Arkansas Tech University. I am minoring in French and Mathematics and pursuing a concurrent Associates degree in Information Technology.
                         </p>
+						<h3 class="text-white">Skills</h3>
+						<p class="text-white-50">
+							I am experienced in numerous programming languages including Java, Python, C++, HTML/CSS, Javascript, and R.
+                        </p>
+						<h3 class="text-white">Accomplishments</h3>
+						<p class="text-white-50">
+							I recieved first place for the 4th Congressional District of Arkansas in the Congressional App Challenge in 2020.
+						</p>
                     </div>
                 </div>
-                <img class="img-fluid" src="assets/img/ipad.png" alt="..." />
             </div>
         </section>
         <!-- Projects-->
         <section class="projects-section bg-light" id="projects">
             <div class="container px-4 px-lg-5">
+				<h1 class="text-dark mb-4" style="text-align:center;">Projects</h1>
                 <!-- Featured Project Row-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
                     <div class="col-xl-8 col-lg-7">
@@ -88,13 +100,13 @@
                 </div>
                 <!-- Project Two Row-->
                 <div class="row gx-0 justify-content-center">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-02.jpg" alt="..." /></div>
+                    <div class="col-lg-6"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/lREWy7wNb-k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="mb-3 mb-lg-0"></iframe></iframe></div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
-                                    <h4 class="text-white">Mountains</h4>
-                                    <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p>
+                                    <h4 class="text-white">Congressional App Challenge Entry: Hot Springs School District Covid-19 Screening Mobile Application</h4>
+                                    <p class="mb-0 text-white-50">This app framework was submitted to and won the 2020 Congressional App Challenge for the 4th Congressional District of Arkansas. The app is designed to screen students, guests and faculty for Covid-19 symptoms in the Hot Springs School District and was designed using Javascript in the Code.Org App Lab Studio.</p>
                                     <hr class="d-none d-lg-block mb-0 me-0" />
                                 </div>
                             </div>
