--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
                         <div class="featured-text text-center text-lg-left">
                             <h4>NFT Preview Card Component</h4>
                             <p class="text-black-50 mb-0">This is a solution to the <a href="https://www.frontendmentor.io/challenges/nft-preview-card-component-SbdUL_w0U">NFT preview card component challenge on Frontend Mentor</a>.</p>
+							<p></p>
+							<p class="text-black-50 mb-0"><a href="https://github.com/Jacob-Heff/web-dev-projects/blob/main/nft-preview/README.md">Project ReadMe</a></p>
                         </div>
                     </div>
                 </div>
@@ -107,6 +109,8 @@
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
                                     <h4 class="text-white">Congressional App Challenge Entry: Hot Springs School District Covid-19 Screening Mobile Application</h4>
                                     <p class="mb-0 text-white-50">This app framework was submitted to and won the 2020 Congressional App Challenge for the 4th Congressional District of Arkansas. The app is designed to screen students, guests and faculty for Covid-19 symptoms in the Hot Springs School District and was designed using Javascript in the Code.Org App Lab Studio.</p>
+									<p></p>
+									<p class="text-black-50 mb-0"><a href="https://studio.code.org/projects/applab/T2zcle3sBL04j275U3zkUlSXaDmN3IwHM8nXPK-WPFI">View Finished Product</a></p>
                                     <hr class="d-none d-lg-block mb-0 me-0" />
                                 </div>
                             </div>
