Updated Portfolio to Only Include Projects

--- a/index.html
+++ b/index.html
@@ -18,47 +18,17 @@
     <body id="page-top">
         <!-- Masthead-->
         <header class="masthead">
-            <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
-                <div class="d-flex justify-content-center">
-                    <div class="text-center">
-                        <h1 class="mx-auto my-0 text-uppercase">Jacob Heffington</h1>
-                        <h2 class="text-white-50 mx-auto mt-2 mb-5">Freshman Computer Science Education Major & Full Stack Web Developer</h2>
-                        <a class="btn btn-primary" href="#about">Learn More</a>
-                    </div>
+            <div class="d-flex justify-content-center">
+                <div class="text-center">
+                    <h1 class="mx-auto my-0 text-uppercase">Jacob Heffington</h1>
+                    <h2 class="text-white-50 mx-auto mt-2 mb-5">Freshman Computer Science Education Major & Full Stack Web Developer</h2>
                 </div>
             </div>
         </header>
-		<!-- About-->
-        <section class="about-section text-center" id="about">
-            <div class="container px-4 px-lg-5">
-				<div class="row gx-4 gx-lg-5">
-                    <div class="col-sm">
-					<img src="assets/img/ipad.png" alt="...">
-					</div>
-					<div class="col-sm">
-					<p></p>
-                        <h1 class="text-white mb-4">About Me</h1>
-                        <p></p>
-						<h3 class="text-white">Who Am I?</h3>
-						<p class="text-white-50">
-                            I am a freshman Computer Science Education major at Arkansas Tech University. I am minoring in French and Mathematics and pursuing a concurrent Associates degree in Information Technology.
-                        </p>
-						<h3 class="text-white">Skills</h3>
-						<p class="text-white-50">
-							I am experienced in numerous programming languages including Java, Python, C++, HTML/CSS, Javascript, and R.
-                        </p>
-						<h3 class="text-white">Accomplishments</h3>
-						<p class="text-white-50">
-							I recieved first place for the 4th Congressional District of Arkansas in the Congressional App Challenge in 2020.
-						</p>
-                    </div>
-                </div>
-            </div>
-        </section>
         <!-- Projects-->
         <section class="projects-section bg-light" id="projects">
             <div class="container px-4 px-lg-5">
-				<h1 class="text-dark mb-4" style="text-align:center;">Projects</h1>
+				<h1 class="text-dark mb-4" style="text-align:center;">Featured Project</h1>
                 <!-- Featured Project Row-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
                     <div class="col-xl-8 col-lg-7">
@@ -79,6 +49,7 @@
                     </div>
                 </div>
                 <!-- Project One Row-->
+				<h1 class="text-dark mb-4" style="text-align:center;">Projects</h1>
                 <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
                     <div class="col-lg-6">
 						<a href="nft-preview/index.html"><div class="contain">
@@ -119,18 +90,18 @@
                 </div>
             </div>
         </section>
-        <!-- Contact-->
+        
+		<!-- Contact-->
         <section class="contact-section bg-black">
-            <div class="container px-4 px-lg-5">
                 <div class="social d-flex justify-content-center">
                     <a class="mx-2" href="mailto: heffingtonj21@gmail.com"><i class="fa fa-envelope"></i></a>
 					<a class="mx-2" href="https://twitter.com/20The_Man"><i class="fab fa-twitter"></i></a>
                     <a class="mx-2" href="https://www.facebook.com/jacob.heffington.731/"><i class="fab fa-facebook-f"></i></a>
                     <a class="mx-2" href="https://www.github.com/jacob-heff"><i class="fab fa-github"></i></a>
-                </div>
             </div>
         </section>
-        <!-- Footer-->
+        
+		<!-- Footer-->
         <footer class="footer bg-black small text-center text-white-50"><div class="container px-4 px-lg-5">Copyright &copy; Jacob Heffington 2022</div></footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
